@@ -4,11 +4,11 @@ set -e
 
 # 检查命令行参数
 if [ $# -lt 2 ] || [ $# -gt 3 ]; then
-    echo "Usage: $0 {start|stop|restart} [spring_profiles_active]" >&2
-    exit 2 # bad usage
+    echo "Usage: $0 <APP_NAME> {start|stop|restart} [spring_profiles_active]" >&2
+    exit 2 # 参数错误
 fi
 
-# 操作
+# 操作参数
 APP_NAME=$1
 ACTION=$2
 SPRING_PROFILES_ACTIVE=${3:-dev}
@@ -17,31 +17,24 @@ echo "APP_NAME: ${APP_NAME}"
 echo "ACTION: ${ACTION}"
 echo "Spring Profiles Active: ${SPRING_PROFILES_ACTIVE}"
 
-# 检查是否运行在容器内
-IN_DOCKER=$(command -v docker &> /dev/null && echo true || echo false)
-
-# 定义 Java 主类和 jar 文件路径
+# 定义路径
+JAR_FILE="/home/admin/${APP_NAME}/${APP_NAME}-service.jar"
 MAIN_CLASS="com.rany.ops.CakeOpsApplication"
-JAR_FILE="/home/admin/${APP_NAME}/cake-ops-service.jar"
 
 # 检查 JAR 文件是否存在
 if [ ! -f "$JAR_FILE" ]; then
-    echo "JAR file does not exist at path: $JAR_FILE" >&2
+    echo "ERROR: JAR file does not exist at path: $JAR_FILE" >&2
     exit 1
 fi
 
 # 定义 JVM 选项
 JAVA_OPTS=(
-    "-Xms512m -Xmx1024m"
+    "-XX:+UseContainerSupport"
+    "-XX:InitialRAMPercentage=50.0"
+    "-XX:MaxRAMPercentage=75.0"
     "-Xloggc:/home/admin/gc.log"
     "-XX:+PrintGCDetails"
     "-XX:+PrintGCDateStamps"
-    "-XX:+PrintGCTimeStamps"
-    "-XX:+PrintGCCause"
-    "-XX:+PrintGCApplicationStoppedTime"
-    "-XX:+UseGCLogFileRotation"
-    "-XX:NumberOfGCLogFiles=10"
-    "-XX:GCLogFileSize=100M"
 )
 
 # 定义启动命令
@@ -49,13 +42,8 @@ START_CMD="java ${JAVA_OPTS[*]} -Dspring.profiles.active=$SPRING_PROFILES_ACTIVE
 
 # 检查应用是否正在运行
 is_running() {
-    if [[ $IN_DOCKER == true ]]; then
-        pgrep -f "$MAIN_CLASS" > /dev/null
-        return $?
-    else
-        ps aux | grep -q "[j]ava.*$MAIN_CLASS"
-        return $?
-    fi
+    pgrep -f "$MAIN_CLASS" > /dev/null
+    return $?
 }
 
 # 启动应用
@@ -64,17 +52,7 @@ start_app() {
     if is_running; then
         echo "Application is already running."
     else
-        # 直接启动 Java 应用，不使用 nohup
-        $START_CMD &
-        APP_PID=$!
-        echo "Application started with PID $APP_PID."
-
-        # 检查 Java 应用是否成功启动
-        sleep 5
-        if ! is_running; then
-            echo "Application failed to start." >&2
-            exit 1
-        fi
+        exec $START_CMD
     fi
 }
 
@@ -82,11 +60,7 @@ start_app() {
 stop_app() {
     echo "Stopping application..."
     if is_running; then
-        if [[ $IN_DOCKER == true ]]; then
-            pkill -f "$MAIN_CLASS"
-        else
-            ps aux | grep "[j]ava.*$MAIN_CLASS" | awk '{print $2}' | xargs kill
-        fi
+        pkill -f "$MAIN_CLASS"
         echo "Application stopped."
     else
         echo "Application is not running."
@@ -99,7 +73,7 @@ restart_app() {
     start_app
 }
 
-# 执行启动命令
+# 执行操作
 case "$ACTION" in
     start)
         start_app
@@ -111,9 +85,7 @@ case "$ACTION" in
         restart_app
         ;;
     *)
-        echo "Usage: $0 {start|stop|restart}" >&2
+        echo "Usage: $0 <APP_NAME> {start|stop|restart} [spring_profiles_active]" >&2
         exit 1
         ;;
 esac
-
-exit 0
